<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".MenuCapitolo">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="50dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chewy"
        android:text="@string/capitolo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/chewy"
        android:text="@string/titolo_capitolo_1"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/but_cap1_vedi_domande"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chewy"
        android:text="@string/vedi_domande"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"/>

    <Button
        android:id="@+id/cap1_interrogami"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chewy"
        android:text="@string/interrogami"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/but_cap1_vedi_domande"/>


</androidx.constraintlayout.widget.ConstraintLayout>