<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interrogami">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toTopOf="@id/button_soluzione"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/titolo_numero_capitolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/chewy"
            android:text="@string/capitoloN"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/numero_domanda"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numero_domanda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/chewy"
            android:text="@string/domandaN"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/j_latex_math_view"
            app:layout_constraintStart_toStartOf="parent"/>

        <ru.noties.jlatexmath.JLatexMathView
            android:id="@+id/j_latex_math_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:padding="16dip"
            app:jlmv_alignHorizontal="start"
            app:jlmv_alignVertical="start"
            app:jlmv_latex="@string/domanda_1_1"
            app:jlmv_textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numero_domanda" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/prossima_domanda_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/chewy"

        android:text="@string/prossima_domanda"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_soluzione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/chewy"
        android:text="@string/soluzione"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@id/prossima_domanda_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>