<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoluzioniDomande">

    <TextView
        android:id="@+id/soluzione_text"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="50dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chewy"
        android:text = "@string/soluzione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_soluzioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chewy"
        android:textSize="30sp"
        android:text="@string/capitoloN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soluzione_text" />

    <TextView
        android:id="@+id/subtitle_soluzioni"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/chewy"
        android:textSize="20sp"
        android:text="@string/domandaN"
        app:layout_constraintStart_toEndOf="@+id/title_soluzioni"
        app:layout_constraintBottom_toBottomOf="@+id/title_soluzioni" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_soluzioni">

        <LinearLayout
            android:id="@+id/soluzioni_domande_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ru.noties.jlatexmath.JLatexMathView
                android:id="@+id/soluzione_domanda_latex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:padding="16dip"
                app:jlmv_alignHorizontal="start"
                app:jlmv_alignVertical="start"
                app:jlmv_latex="@string/soluzione_1_1"
                app:jlmv_textSize="45sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cap_1_numero_domanda" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>